# go/event_kit_api/event_kit_api.go
@@ -1,6 +1,6 @@
 // Package event_kit_api provides primitives to interact with the openapi HTTP API.
 //
-// Code generated by github.com/deepmap/oapi-codegen version v1.11.1-0.20220629212257-2cf7fcf5b26d DO NOT EDIT.
+// Code generated by github.com/deepmap/oapi-codegen version v1.13.4 DO NOT EDIT.
 package event_kit_api
 
 import (
@@ -66,6 +66,18 @@ const (
 	Wait   ExperimentStepExecutionType = "wait"
 )
 
+// Defines values for ExperimentStepTargetExecutionState.
+const (
+	Canceled  ExperimentStepTargetExecutionState = "canceled"
+	Completed ExperimentStepTargetExecutionState = "completed"
+	Created   ExperimentStepTargetExecutionState = "created"
+	Errored   ExperimentStepTargetExecutionState = "errored"
+	Failed    ExperimentStepTargetExecutionState = "failed"
+	Prepared  ExperimentStepTargetExecutionState = "prepared"
+	Running   ExperimentStepTargetExecutionState = "running"
+	Skipped   ExperimentStepTargetExecutionState = "skipped"
+)
+
 // Defines values for MutatingHttpMethod.
 const (
 	Delete MutatingHttpMethod = "delete"
@@ -84,7 +96,7 @@ const (
 type AccessTokenPrincipal struct {
 	Id string `json:"id"`
 
-	// A human-readable name for the user.
+	// Name A human-readable name for the user.
 	Name          string          `json:"name"`
 	PrincipalType string          `json:"principalType"`
 	TokenType     AccessTokenType `json:"tokenType"`
@@ -97,20 +109,20 @@ type AccessTokenType string
 type BatchPrincipal struct {
 	PrincipalType string `json:"principalType"`
 
-	// This is a unique identifier for the user.
+	// Username This is a unique identifier for the user.
 	Username string `json:"username"`
 }
 
-// HTTP endpoint which the Steadybit platform/agent could communicate with.
+// DescribingEndpointReference HTTP endpoint which the Steadybit platform/agent could communicate with.
 type DescribingEndpointReference struct {
-	// HTTP method to use when calling the HTTP endpoint.
+	// Method HTTP method to use when calling the HTTP endpoint.
 	Method DescribingEndpointReferenceMethod `json:"method"`
 
-	// Absolute path of the HTTP endpoint.
+	// Path Absolute path of the HTTP endpoint.
 	Path string `json:"path"`
 }
 
-// HTTP method to use when calling the HTTP endpoint.
+// DescribingEndpointReferenceMethod HTTP method to use when calling the HTTP endpoint.
 type DescribingEndpointReferenceMethod string
 
 // Environment defines model for Environment.
@@ -121,38 +133,41 @@ type Environment struct {
 
 // EventListener defines model for EventListener.
 type EventListener struct {
-	// List of event names that the event listener want to listen to. You may optionally define the special `*` event name to listen to all events.
+	// ListenTo List of event names that the event listener want to listen to. You may optionally define the special `*` event name to listen to all events.
 	ListenTo []string           `json:"listenTo"`
 	Method   MutatingHttpMethod `json:"method"`
 
-	// Absolute path of the HTTP endpoint.
+	// Path Absolute path of the HTTP endpoint.
 	Path string `json:"path"`
 
-	// If the agent is deployed as a daemonset in Kubernetes, should the discovery only be called from the leader agent? This can be helpful to avoid duplicate event listener calls every running agent. You may alternatively define that the listener should run only for Steadybit agents operating within the AWS agent mode (as defined by the `STEADYBIT_AGENT_MODE` Steadybit agent environment variable / the `agent.mode` Steadybit agent Helm chart value).
+	// RestrictTo If the agent is deployed as a daemonset in Kubernetes, should the discovery only be called from the leader agent? This can be helpful to avoid duplicate event listener calls every running agent. You may alternatively define that the listener should run only for Steadybit agents operating within the AWS agent mode (as defined by the `STEADYBIT_AGENT_MODE` Steadybit agent environment variable / the `agent.mode` Steadybit agent Helm chart value).
 	RestrictTo *EventListenerRestrictTo `json:"restrictTo,omitempty"`
 }
 
-// If the agent is deployed as a daemonset in Kubernetes, should the discovery only be called from the leader agent? This can be helpful to avoid duplicate event listener calls every running agent. You may alternatively define that the listener should run only for Steadybit agents operating within the AWS agent mode (as defined by the `STEADYBIT_AGENT_MODE` Steadybit agent environment variable / the `agent.mode` Steadybit agent Helm chart value).
+// EventListenerRestrictTo If the agent is deployed as a daemonset in Kubernetes, should the discovery only be called from the leader agent? This can be helpful to avoid duplicate event listener calls every running agent. You may alternatively define that the listener should run only for Steadybit agents operating within the AWS agent mode (as defined by the `STEADYBIT_AGENT_MODE` Steadybit agent environment variable / the `agent.mode` Steadybit agent Helm chart value).
 type EventListenerRestrictTo string
 
-// Lists all listeners that the platform/agent could call.
+// EventListenerList Lists all listeners that the platform/agent could call.
 type EventListenerList struct {
 	EventListeners []EventListener `json:"eventListeners"`
 }
 
 // ExperimentExecution defines model for ExperimentExecution.
 type ExperimentExecution struct {
-	EndedTime            *time.Time                `json:"endedTime,omitempty"`
-	ExecutionId          float32                   `json:"executionId"`
-	ExperimentKey        string                    `json:"experimentKey"`
-	FailureReason        *string                   `json:"failureReason,omitempty"`
-	FailureReasonDetails *string                   `json:"failureReasonDetails,omitempty"`
-	Hypothesis           string                    `json:"hypothesis"`
-	Name                 string                    `json:"name"`
-	PreparedTime         time.Time                 `json:"preparedTime"`
-	StartedTime          time.Time                 `json:"startedTime"`
-	State                ExperimentExecutionState  `json:"state"`
-	Steps                []ExperimentStepExecution `json:"steps"`
+	EndedTime     *time.Time `json:"endedTime,omitempty"`
+	ExecutionId   float32    `json:"executionId"`
+	ExperimentKey string     `json:"experimentKey"`
+	Hypothesis    string     `json:"hypothesis"`
+	Name          string     `json:"name"`
+	PreparedTime  time.Time  `json:"preparedTime"`
+
+	// Reason Additional information about the reason for the state.
+	Reason *string `json:"reason,omitempty"`
+
+	// ReasonDetails Additional information about the reason for the state.
+	ReasonDetails *string                  `json:"reasonDetails,omitempty"`
+	StartedTime   time.Time                `json:"startedTime"`
+	State         ExperimentExecutionState `json:"state"`
 }
 
 // ExperimentExecutionState defines model for ExperimentExecution.State.
@@ -160,16 +175,17 @@ type ExperimentExecutionState string
 
 // ExperimentStepExecution defines model for ExperimentStepExecution.
 type ExperimentStepExecution struct {
-	ActionId         *string                            `json:"actionId,omitempty"`
-	ActionKind       *ExperimentStepExecutionActionKind `json:"actionKind,omitempty"`
-	ActionName       *string                            `json:"actionName,omitempty"`
-	CustomLabel      *string                            `json:"customLabel,omitempty"`
-	EndedTime        *time.Time                         `json:"endedTime,omitempty"`
-	Id               uuid.UUID                          `json:"id"`
-	StartedTime      *time.Time                         `json:"startedTime,omitempty"`
-	State            ExperimentStepExecutionState       `json:"state"`
-	TargetExecutions *[]ExperimentStepExecutionTarget   `json:"targetExecutions,omitempty"`
-	Type             ExperimentStepExecutionType        `json:"type"`
+	ActionId      *string                            `json:"actionId,omitempty"`
+	ActionKind    *ExperimentStepExecutionActionKind `json:"actionKind,omitempty"`
+	ActionName    *string                            `json:"actionName,omitempty"`
+	CustomLabel   *string                            `json:"customLabel,omitempty"`
+	EndedTime     *time.Time                         `json:"endedTime,omitempty"`
+	ExecutionId   float32                            `json:"executionId"`
+	ExperimentKey string                             `json:"experimentKey"`
+	Id            uuid.UUID                          `json:"id"`
+	StartedTime   *time.Time                         `json:"startedTime,omitempty"`
+	State         ExperimentStepExecutionState       `json:"state"`
+	Type          ExperimentStepExecutionType        `json:"type"`
 }
 
 // ExperimentStepExecutionActionKind defines model for ExperimentStepExecution.ActionKind.
@@ -181,13 +197,29 @@ type ExperimentStepExecutionState string
 // ExperimentStepExecutionType defines model for ExperimentStepExecution.Type.
 type ExperimentStepExecutionType string
 
-// ExperimentStepExecutionTarget defines model for ExperimentStepExecutionTarget.
-type ExperimentStepExecutionTarget struct {
-	AgentHostname    string              `json:"agentHostname"`
-	TargetAttributes map[string][]string `json:"targetAttributes"`
-	TargetName       string              `json:"targetName"`
-	TargetType       string              `json:"targetType"`
+// ExperimentStepTargetExecution defines model for ExperimentStepTargetExecution.
+type ExperimentStepTargetExecution struct {
+	AgentHostname string     `json:"agentHostname"`
+	EndedTime     *time.Time `json:"endedTime,omitempty"`
+	ExecutionId   float32    `json:"executionId"`
+	ExperimentKey string     `json:"experimentKey"`
+	Id            uuid.UUID  `json:"id"`
+
+	// Reason Additional information about the reason for the state.
+	Reason *string `json:"reason,omitempty"`
+
+	// ReasonDetails Additional information about the reason for the state.
+	ReasonDetails    *string                            `json:"reasonDetails,omitempty"`
+	StartedTime      *time.Time                         `json:"startedTime,omitempty"`
+	State            ExperimentStepTargetExecutionState `json:"state"`
+	StepExecutionId  uuid.UUID                          `json:"stepExecutionId"`
+	TargetAttributes map[string][]string                `json:"targetAttributes"`
+	TargetName       string                             `json:"targetName"`
+	TargetType       string                             `json:"targetType"`
 }
+
+// ExperimentStepTargetExecutionState defines model for ExperimentStepTargetExecution.State.
+type ExperimentStepTargetExecutionState string
 
 // ListenResult defines model for ListenResult.
 type ListenResult = map[string]interface{}
@@ -215,11 +247,11 @@ type Tenant struct {
 type UserPrincipal struct {
 	Email *string `json:"email,omitempty"`
 
-	// A human-readable name for the user.
+	// Name A human-readable name for the user.
 	Name          string `json:"name"`
 	PrincipalType string `json:"principalType"`
 
-	// This is a unique identifier for the user.
+	// Username This is a unique identifier for the user.
 	Username string `json:"username"`
 }
 
@@ -230,25 +262,28 @@ type EventListenerListResponse struct {
 
 // EventRequestBody defines model for EventRequestBody.
 type EventRequestBody struct {
-	Environment         *Environment         `json:"environment,omitempty"`
-	EventName           string               `json:"eventName"`
-	EventTime           time.Time            `json:"eventTime"`
-	ExperimentExecution *ExperimentExecution `json:"experimentExecution,omitempty"`
-	Id                  uuid.UUID            `json:"id"`
+	Environment                   *Environment                   `json:"environment,omitempty"`
+	EventName                     string                         `json:"eventName"`
+	EventTime                     time.Time                      `json:"eventTime"`
+	ExperimentExecution           *ExperimentExecution           `json:"experimentExecution,omitempty"`
+	ExperimentStepExecution       *ExperimentStepExecution       `json:"experimentStepExecution,omitempty"`
+	ExperimentStepTargetExecution *ExperimentStepTargetExecution `json:"experimentStepTargetExecution,omitempty"`
+	Id                            uuid.UUID                      `json:"id"`
 
-	// The principal describes through which activity the action was triggered.
-	Principal       Principal  `json:"principal"`
-	StepExecutionId *uuid.UUID `json:"stepExecutionId,omitempty"`
-	Team            *Team      `json:"team,omitempty"`
-	Tenant          Tenant     `json:"tenant"`
+	// Principal The principal describes through which activity the action was triggered.
+	Principal Principal `json:"principal"`
+	Team      *Team     `json:"team,omitempty"`
+	Tenant    Tenant    `json:"tenant"`
 }
 
+// AsEventListenerList returns the union data inside the EventListenerListResponse as a EventListenerList
 func (t EventListenerListResponse) AsEventListenerList() (EventListenerList, error) {
 	var body EventListenerList
 	err := json.Unmarshal(t.union, &body)
 	return body, err
 }
 
+// FromEventListenerList overwrites any union data inside the EventListenerListResponse as the provided EventListenerList
 func (t *EventListenerListResponse) FromEventListenerList(v EventListenerList) error {
 	b, err := json.Marshal(v)
 	t.union = b
@@ -264,4 +299,5 @@ func (t *EventListenerListResponse) UnmarshalJSON(b []byte) error {
 	err := t.union.UnmarshalJSON(b)
 	return err
 }
-type Principal interface {}
+
+type Principal interface{}
